@@ -59,6 +59,7 @@ interface:
 - the callbacks NLPIGETSOLUTION and NLPISETINITIALGUESS and the functions SCIPnlpiGetSolution() and SCIPnlpiSetInitialGuess() now also take arguments to get/set dual values
 - added methods SCIPnlrowGetDualsol(), SCIPgetNLPVarsLbDualsol(), SCIPgetNLPVarsUbDualsol() to retrieve dual values from an NLP solution
 - added method SCIPbranchVarValNary() for n-ary variable branching
+- the callback NLPICOPY gets the block memory of the target SCIP as additional parameter
 
 performance improvements:
 - performance improvements in prop_vbounds
@@ -89,6 +90,7 @@ fixed bugs:
 - fixed bug in cons_orbitope:resprop() for the packing case
 - fixed bug in reader_mps.c: if a variables first occurence is in the bounds section, then the corresponding variable bound was lost
 - fixed bug trying to print big messages bigger than SCIP_MAXSTRLEN
+- fixed bug in copying NLPI interfaces that use block-memory (NLPI copy used block memory from source SCIP)
 
 plugins:
 - added vbound heuristic (heur_vbounds.{c,h})
